# backend

./: .env  .env.docker  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 2025-06-22_01_create info.py  2025-06-22_02_create location.py  2025-06-22_03_create metric.py
alembic/versions/schema/: 2025-06-22_01_create_info.py  2025-06-22_02_create_location.py  2025-06-22_03_create_metric.py  2025-12-22_04_create_data_directory.py
docker/: Dockerfile  entrypoint.sh
etl/: fill_avg.py  fill_avg_sex_ocu_cur.py  fill_labout_comes.py  fill_labout_comes_by_sex.py  fill_monthly_average_temperatures.py  get_geo.py  load_professions.py  main.py  main_etl.py  orchestrator.py  utils.py
etl/config/: config_schema.py
etl/etl_configs/: __init__.py  avg_monthly_sex_occupation.py  lmoi_employment_rate_by_educational_attainment.py  lmoi_employment_unemployment_and_participation_rates_by_sex.py
etl/old/: check_average_monthly.py  fill_iso_countries.py  fill_out_average_monthly.py  get_cities.py  get_countries.py
etl/services/: __init__.py  cache_service.py  data_assembler.py  data_parser.py  db_service.py  entity_resolver.py  file_reader.py  session_manager.py
etl/universal/: config_schema.py  lru_caches.py  main_etl.py  service_db_etl.py  service_etl.py  session_manager.py
etl/universal/configs/: avg_monthly_sex_occupation.py
etl/utils/: lru_caches.py  period_key.py  stats.py
sql/: get_main_attr.sql  refresh_mv.sql
src/core/: database.py  dependency.py  enum.py  enums.py
src/core/config/: __init__.py  config.py  logging.py
src/core/database/: __init__.py  base_crud_mixin.py  base_dto.py  base_models.py  database.py  db_config.py  models_and_mixins.py  models_init.py
src/core/m_views/: __init__.py  mv_short_latest.py
src/core/models/: __init__.py  base_dto.py  base_models.py  info.py  location.py  metriс.py
src/core/schemas/: base_schemas.py  info.py
src/core/services/: ssh_service.py
src/core/utils/: country_companator.py  fill_iso_countries.py  get_cities.py  get_geo.py  (+2 more)
src/ms_admin/: views.py
src/ms_compare/: router.py
src/ms_location/: router.py
src/ms_main/: router.py
src/ms_metric/: enum.py  enums.py  router.py
(+73 files in other folders)
