[project]
name = "trava_backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Valera K.",email = "vk1337atliberty@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
package-mode = false


dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "requests (>=2.32.4,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqladmin (>=0.20.1,<0.21.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
