[tool.poetry]
name = "trava_backend"
version = "0.1.0"
description = ""
authors = ["Valera K. <vk1337atliberty@gmail.com>"]
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.115.13"
pydantic = "^2.11.7"
pydantic-settings = "^2.9.1"
httpx = "^0.28.1"
requests = "^2.32.4"
uvicorn = "^0.34.3"
sqlalchemy = "^2.0.41"
alembic = "^1.16.2"
asyncpg = "^0.30.0"
sqladmin = "^0.20.1"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
