[tool.poetry]
name = "trava_backend"
version = "0.1.0"
description = ""
authors = ["Valera K. <vk1337atliberty@gmail.com>"]
readme = "README.md"
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
asyncpg = "^0.30.0"
fastapi = "^0.115.13"
geoalchemy2 = "^0.18.0"
httpx = "^0.28.1"
psycopg2-binary = "^2.9.10"
pydantic-settings = "^2.9.1"
pydantic = "^2.11.7"
requests = "^2.32.4"
sqladmin = "^0.20.1"
sqlalchemy = "^2.0.41"
uvicorn = "^0.34.3"
shapely = "^2.1.2"
pandas = "^2.3.3"
openpyxl = "^3.1.5"
paramiko = "2.12.0"
sshtunnel = "^0.4.0"
cryptography = "^46.0.3"
tenacity = "^9.1.2"
numpy = "^2.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
